internal/lang/test/testdata/errors/call_non_func.scampi
module main

let x = 42
let y = x(1, 2)
